# sla_equations

./: CMakeLists.txt  Makefile  README.md
headers_of_meth/: 3dm_sp_h.hpp
methods/: 3dm_sp.cpp
src/: CMakeLists.txt
src/headers_of_meth/: 3dm_sp.hpp  CSR.hpp  CSR_h.hpp  DenseMatrix.hpp  chebyshev.hpp  dense_mat_h.hpp  householder.hpp  simple_iter_methods.hpp  vector.h  vector.hpp
src/methods/: 3dm_sp.cpp  CSR.cpp  DenseMatrix.cpp  chebyshev.cpp  dense_mat.cpp  householder.cpp  simple_iter_methods.cpp  vector.cpp
src/vect_lib/: vector.h
test_headers/: gen_h.hpp
tests/: CMakeLists.txt  eve.s  ever_flow.cpp  gen_rand.cpp  gen_rand.hpp  generator_of_thr_sle.cpp  make  netest_CSR_Dense_speed.cpp  netest_control.cpp  netest_vector.cpp  sravnenie.cpp  test_3dm_sp.cpp  test_CSR.cpp  test_CSR_Dense_speed.cpp  test_Dense.cpp  test_control.cpp  test_housholder.cpp  test_simple_iter.cpp  test_sr2.cpp  test_vector.cpp  vector_test.cpp
visualisations/: Dense_CSR_speed.py  sr2.py
